--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     ]
   ],
   "_from": "react-native-firebase-analytics-bridge@0.0.4",
-  "_id": "react-native-firebase-analytics-bridge@0.0.4",
   "_inCache": true,
   "_installable": true,
   "_location": "/react-native-firebase-analytics-bridge",
@@ -47,10 +46,7 @@
   "_shrinkwrap": null,
   "_spec": "react-native-firebase-analytics-bridge@0.0.4",
   "_where": "/Users/Sanjeev/Documents/ReactNative/POCFirebase",
-  "author": {
-    "name": "Sanjeev Bharadwaj",
-    "email": "sanjeev.venugopala@gmail.com"
-  },
+  "author": "Sanjeev Bharadwaj <sanjeev.venugopala@gmail.com>",
   "bugs": {
     "url": "https://github.com/SanjeevBharadwaj/react-native-firebase-analytics-bridge/issues"
   },
@@ -82,14 +78,10 @@
   "license": "MIT",
   "main": "./index.js",
   "maintainers": [
-    {
-      "name": "sanjeevbharadwaj",
-      "email": "sanjeev.venugopala@gmail.com"
-    }
+    "sanjeevbharadwaj <sanjeev.venugopala@gmail.com>"
   ],
   "name": "react-native-firebase-analytics-bridge",
   "optionalDependencies": {},
-  "readme": "ERROR: No README data found!",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SanjeevBharadwaj/react-native-firebase-analytics-bridge.git"
@@ -97,5 +89,5 @@
   "scripts": {
     "test": "echo \"Error: no test yet!\" && exit 0"
   },
-  "version": "0.0.4"
+  "version": "0.0.5"
 }
